# simplified_bank

./: Cargo.toml  README.md  flake.nix  package.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5wp2cvp13b3a2fzx0lbl1qdr5qwb82qb-source  8xj2b95jglq8sf5acxhr71py1m6jl5xm-source  ikqv8iwv3k8cjkdrcwwgj646majrz2z4-source
data/: dispute_deposit_with_chargeback.csv  dispute_deposit_with_resolution.csv  dispute_no_trailing_comma.csv  dispute_withdrawal_with_resolution.csv  example_input.csv  example_trimmed_input.csv  example_with_garbage.csv  example_with_precision.csv  locked_account_deposit.csv  locked_account_withdrawal.csv  thief.csv
src/: main.rs
