[package]
name = "simplified_bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
csv-async = { version = "1.2.3", features = ["with_serde", "tokio" ]}
serde = { version = "1.0.130", features = ["derive"]}
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = "0.1.8"
rust_decimal = "1.17.0"
